# Archivo_ZIP

./: CHANGELOG.MD  README.md  main_multiple.py  main_no_os.py  main_os.py  pyproject.toml  requirements.txt
src/archivo_zip/: __main__.py  cli.py  zipper.py
tests/: test_cli.py  test_cli_integration.py  test_zipper.py
