
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archivo-zip"
version = "1.4.0"
description = "CLI tool to compress one or more files into a ZIP archive."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Art-Phy" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
archivo-zip = "archivo_zip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
